Modificar lecciones arreglado y lista de usuarios continuada

--- a/Memoria/capitulos/07_Implementacion.tex
+++ b/Memoria/capitulos/07_Implementacion.tex
@@ -505,7 +505,7 @@ Dentro de dicho widget tendremos:
 \paragraph*{Lógica}
 \label{sec:logica}
 La lógica para mostrar el resultado del test es bastante sencilla.
-Tras enviar las respuestas del usuario mediante la petición del envío de test (POST /create-test-and-progress) al servidor, se comparan las respuestas del usuario con las respuestas correctas almacenadas en cada una de las preguntas (estas últimas se obtienen mediante el Provider de las preguntas). 
+Tras el envío del test al servidor, se comparan las respuestas del usuario con las respuestas correctas almacenadas en cada una de las preguntas (estas últimas se obtienen mediante el Provider de las preguntas). 
 Una vez obtenidos estos datos, se calcula el porcentaje de aciertos y se envía a la vista.
 
 
